Vertical centering and fix margin collapsing
Achieve vertical centering and prevent margin collapsing outside its
container by adding top/bottom paddings to the container.
> Adding a border or padding between two margins stops them from
> collapsing.

Now we have container padding add up to its content's margin.

--- a/3-box-model/style.css
+++ b/3-box-model/style.css
@@ -14,6 +14,9 @@ body {
 }
 
 header {
+    padding: 1em 1.5em; 
+    /* now margin of inner h1 elem does not collapse outside this container
+     * but is contained within it, adding up to its inner (vertical) spacing. */
     color: #fff;
     background-color: #0072b0;
     border-radius: 0.5em;
